<resources>
    <string name="app_name">Smart Audio</string>
    <string name="action_settings">Settings</string>
    <string name="options_activity_title">Settings</string>


    <string name="image_view_description">ImageView</string>

    <string name="device_name_title">Device name</string>
    <string name="audio_setting_title">Sound streaming</string>
    <string name="audio_streaming_summary">Enable/Disable audio streaming</string>
    <string name="audio_encoder_title">Audio encoder</string>
    <string name="audio_encoder_summary">AAC requires at least ICS</string>
    <string name="rtsp_server_title">RTSP server</string>
    <string name="rtsp_enabled_title">Enabled</string>
    <string name="rtsp_enabled_summary">Useful to use Smart Cam directly with VLC</string>
    <string name="rtsp_port_title">RTSP server port</string>
    <string name="rtsp_port_summary">Port used by the RTSP server</string>
    <string name="more_option_title">More options</string>
    <string name="notification_config_title">Notification</string>
    <string name="notification_config_summary">Enable/Disable the notification</string>
    <string name="open_source_license_title">Open Source License</string>

    <string name="ok">OK</string>

    <string name="bind_failed">You need to choose another port for the %s server !</string>
    <string name="port_used">Port already in use !</string>

    <string name="notification_title">Smart Audio</string>
    <string name="notification_content">Smart Audio is running</string>

    <string name="menu_item_bluetooth">Bluetooth</string>
    <string name="menu_item_options">Options</string>
    <string name="menu_item_quit">Quit</string>

    <string name="tv_streaming">Streaming !</string>
    <string name="tv_bitrate">0 kbps</string>
    <string name="tv_warning">Turn on wifi or tethering !</string>
    <string name="tv_device_ip_title">Device IP address:</string>

    <string name="connect_success">Connected.</string>
    <string name="connection_lost">Connection lost.</string>
    <string name="tv_connecting_console">Connecting to console</string>

    <string name="button_start_client">Start</string>

    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="scanning">Scanning for devices</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="button_scan">Scan for devices</string>

    <string name="setting_guide_title">Welcome!</string>
    <string name="setting_guide_description">Click on preferences X if you want to change the device name or the RTSP port.</string>

    <string name="button_guide_title">Stream Now!</string>
    <string name="button_guide_description">Click on "Start" to begin.</string>

    <string name="permission_warning">To continue, please enable Camera, Microphone, Read Write External Storage And Phone permission for this application.</string>
    <string name="dismiss">Dismiss</string>

</resources>
