<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/ic_background"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/station_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_station_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/device_ip_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_device_ip_title"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/device_ip_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textSize="15sp"/>
        <View
            android:layout_width="100dp"
            android:layout_height="1sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/white"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/streaming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_streaming"
                android:textColor="#11FF11"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/tv_bitrate"
                android:textColor="#11FF11"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/advice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/tv_warning"
            android:textColor="#DD1111"
            android:textSize="20sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/control_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tv_connecting_console"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:visibility="gone"/>
        </LinearLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center">

        <ImageView
            android:id="@+id/image_view_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_view_mic"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/image_view_mic"
            android:rotationY="180"
            android:src="@drawable/ic_disconnect_sign"
            android:contentDescription="@string/image_view_description"/>

        <ImageView
            android:id="@+id/image_view_mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingBottom="20dp"
            android:src="@drawable/ic_mic"
            android:contentDescription="@string/image_view_description"/>

        <ImageView
            android:id="@+id/image_view_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/image_view_mic"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:layout_toStartOf="@+id/image_view_mic"
            android:src="@drawable/ic_disconnect_sign"
            android:contentDescription="@string/image_view_description"/>
    </RelativeLayout>

</LinearLayout>